sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
val x:Int=GetNombreValeurs()
for (x<- 0 to 9){
  for (y<- 0 to 9-x){
    if (plusPetit(y,y+1)==true) {
      echange(y,y+1)}}}}
  